# vcpkg-ports-test

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
custom-registry/ports/imgui/: CMakeLists.txt  portfile.cmake
custom-registry/ports/imgui/100.100.100/: vcpkg.json
custom-registry/versions/: baseline.json
custom-registry/versions/i-/: imgui.json
